--- a/app/views/development_metrics/review_turnaround/_main_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_main_metric.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'shared/line-chart',
             locals: {
-              metric_name: 'Review Turnaround',
+              metric_name: 'Average',
               metric: review_turnaround[:per_project] || review_turnaround[:per_department]
             } if review_turnaround && (review_turnaround[:per_project] || review_turnaround[:per_department]) %>
 <%= render partial: 'shared/column-chart',
