--- a/app/views/development_metrics/code_climate/_code_climate_project_summary.erb
+++ b/app/views/development_metrics/code_climate/_code_climate_project_summary.erb
@@ -4,16 +4,24 @@
   </div>
   <% if code_climate -%>
     <div class="col-md-1">
-      <span class="h6 text-success"><%= code_climate.code_climate_rate %></span>
+      <span class="h6 text-success">
+        <%= render 'shared/code_climate_metric', metric: code_climate.code_climate_rate, suffix: '' %>
+      </span>
     </div>
     <div class="col-md-3">
-      <span class="code-climate-summary text-danger"><%= code_climate.invalid_issues_count %> invalid issues</span>
+      <span class="text-danger">
+        <%= render 'shared/code_climate_metric', metric: code_climate.invalid_issues_count, suffix: 'invalid issues' %>
+      </span>
     </div>
     <div class="col-md-3">
-      <span class="code-climate-summary text-danger"><%= code_climate.wont_fix_issues_count %> won't fix issues</span>
+      <span class="text-danger">
+        <%= render 'shared/code_climate_metric', metric: code_climate.wont_fix_issues_count, suffix: "won't fix issues" %>
+      </span>
     </div>
     <div class="col-md-3">
-      <span class="code-climate-summary text-danger"><%= code_climate.open_issues_count %> open issues</span>
+      <span class="text-danger">
+        <%= render 'shared/code_climate_metric', metric: code_climate.open_issues_count, suffix: 'open issues' %>
+      </span>
     </div>
   <% else -%>
     <div class="col-md-8">
