--- a/app/views/projects/by_relevance/index.erb
+++ b/app/views/projects/by_relevance/index.erb
@@ -43,7 +43,7 @@
                     <td class="align-middle"><%= project[:name] %></td>
                     <td class="align-middle"><%= project[:is_private] %></td>
                     <td class="align-middle text-center">
-                      <a class="btn btn-primary" href="<%= projects_development_metrics_path({project_name: project[:name], metric: { period: params&.dig(:metric, :period) }}) %>" role="button">See details</a>
+                      <a class="btn btn-primary" href="<%= projects_development_metrics_path({project_name: project[:name], metric: { period: params&.dig(:metric, :period) }}) %>" role="button">See project</a>
                     </td>
                   </tr>
                 <% end %>
