--- a/app/views/code_climate/departments/_code_climate_department_report.erb
+++ b/app/views/code_climate/departments/_code_climate_department_report.erb
@@ -1,19 +1,41 @@
 <div class="row">
   <div class="col-md-12">
-    <table class="code-climate-projects-report table">
-      <tbody>
-        <% projects_details.each do |project_summary| -%>
-          <%= render 'code_climate_project_report',
-            code_climate: {
-              name: project_summary.name,
-              code_climate_rate: project_summary.rate,
-              invalid_issues_count: project_summary.invalid_issues_count,
-              wont_fix_issues_count: project_summary.wont_fix_issues_count,
-              open_issues_count: project_summary.open_issues_count,
-              test_coverage: project_summary.test_coverage
-            } %>
-        <% end %>
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="table table-striped table-bordered table-hover">
+      <thead class="thead-dark"><th colspan="7">Projects with available CodeClimate data for selected time range</th></thead>
+        <thead class="thead-light">
+          <th>Name</th>
+          <th>Rate</th>
+          <th>Test Coverage</th>
+          <th>Invalid Issues Count</th>
+          <th>Won't Fix Issues</th>
+          <th>Open Issues</th>
+          <th></th>
+        </thead>
+        <tbody>
+          <% projects_details.each do |project_summary| -%>
+            <%= render 'code_climate_project_report',
+              code_climate: {
+                name: project_summary.name,
+                code_climate_rate: project_summary.rate,
+                invalid_issues_count: project_summary.invalid_issues_count,
+                wont_fix_issues_count: project_summary.wont_fix_issues_count,
+                open_issues_count: project_summary.open_issues_count,
+                test_coverage: project_summary.test_coverage
+              } %>
+          <% end %>
+        </tbody>
+      </table>
+      <% if projects_without_cc.present? -%>
+        <table class="table table-striped table-bordered table-hover">
+          <thead class="thead-dark"><th colspan="7">Projects without available CodeClimate data for selected time range</th></thead>
+          <tbody>
+            <% projects_without_cc.each do |project| -%>
+              <%= render 'code_climate_project_without_cc', project: project %>
+            <% end %>
+          </tbody>
+        </table>
+      <% end %>
+    </div>
   </div>
 </div>
