--- a/app/views/code_climate/departments/_code_climate_project_report.erb
+++ b/app/views/code_climate/departments/_code_climate_project_report.erb
@@ -1,34 +1,31 @@
 <tr>
-  <td>
-    <%= link_to projects_development_metrics_path(
-        {project_name: code_climate[:name], metric: { period: params&.dig(:metric, :period) }}
-      ), class: 'project-name-link' do %>
-        <%= "#{code_climate[:name]}"%>
-    <% end %>
-  </td>
-  <td>
+  <td class="align-middle text-center"><%= "#{code_climate[:name]}"%></td>
+  <td class="align-middle text-center">
     <span class="h6 text-success">
       <%= render 'shared/code_climate_metric', metric: code_climate[:code_climate_rate], suffix: '' %>
     </span>
   </td>
-  <td>
+  <td class="align-middle text-center">
     <span class="text-success">
       <%= render 'shared/code_climate_metric', metric: code_climate[:test_coverage], suffix: '%' %>
     </span>
   </td>
-  <td>
+  <td class="align-middle text-center">
     <span class="text-danger">
       <%= render 'shared/code_climate_metric', metric: code_climate[:invalid_issues_count], suffix: 'invalid issues' %>
     </span>
   </td>
-  <td>
+  <td class="align-middle text-center">
     <span class="text-danger">
       <%= render 'shared/code_climate_metric', metric: code_climate[:wont_fix_issues_count], suffix: "won't fix issues" %>
     </span>
   </td>
-  <td>
+  <td class="align-middle text-center">
     <span class="text-danger">
       <%= render 'shared/code_climate_metric', metric: code_climate[:open_issues_count], suffix: 'open issues' %>
     </span>
+  </td>
+  <td class="align-middle text-center">
+    <a class="btn btn-primary" href="<%= projects_development_metrics_path({project_name: code_climate[:name], metric: { period: params&.dig(:metric, :period) }}) %>" role="button">See project</a>
   </td>
 </tr>
