Add Time to 2nd review distribution graph

--- a/app/views/development_metrics/review_turnaround/_main_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_main_metric.erb
@@ -7,6 +7,5 @@
             locals: {
               metric_name: 'Distribution',
               suffix: " reviews",
-              metric: review_turnaround[:per_department_distribution]
-            } if review_turnaround && review_turnaround[:per_department_distribution] %>
-
+              metric: review_turnaround[:per_project_distribution] || review_turnaround[:per_department_distribution]
+            } if review_turnaround && (review_turnaround[:per_project_distribution] || review_turnaround[:per_department_distribution]) %>
