--- a/app/views/development_metrics/departments.erb
+++ b/app/views/development_metrics/departments.erb
@@ -28,7 +28,16 @@
         </div>
         <% if @department %>
           <div class="metrics shadow-box">
-            <h4 class="p-3">Time to second review</h4>
+            <h4 class="p-3">
+              Time to second review
+              <% if @review_turnaround_success_rate.present? %>
+                <span class="badge badge-info success_rate_btn">
+                  <%= @review_turnaround_success_rate[:rate] %>% success rate |
+                  <%= @review_turnaround_success_rate[:successful] %> /
+                  <%= @review_turnaround_success_rate[:total] %> reviews
+                </span>
+              <% end %>
+            </h4>
             <div class="distribution-report-button mr-5 mb-2">
               <%= link_to 'See report',
                           department_time_to_second_review_prs_path(params[:department_name], { metric: { period: params&.dig(:metric, :period) } }),
@@ -43,7 +52,16 @@
             </div>
           </div>
           <div class="metrics shadow-box">
-            <h4 class="p-3">Time to merge</h4>
+            <h4 class="p-3">
+              Time to merge
+              <% if @merge_time_success_rate.present? %>
+                <span class="badge badge-info success_rate_btn">
+                  <%= @merge_time_success_rate[:rate] %>% success rate |
+                  <%= @merge_time_success_rate[:successful] %> /
+                  <%= @merge_time_success_rate[:total] %> pull requests
+                </span>
+              <% end %>
+            </h4>
             <div class="distribution-report-button mr-5 mb-2">
               <%= link_to 'See report',
                           department_time_to_merge_prs_path(params[:department_name], { metric: { period: params&.dig(:metric, :period) } }),
