Enabled features settings

--- a/app/views/development_metrics/_sidebar.erb
+++ b/app/views/development_metrics/_sidebar.erb
@@ -16,12 +16,14 @@
   </div>
   <%= yield(:projects_dropdown) %>
 </div>
-<div class="btn-group btn-entity-group">
-  <div class='custom-list d-flex flex-row align-items-center'>
-    <div class='circle'></div>
-    <%= link_to users_development_metrics_path do %>
-      <span class='font-size-1'>Users</span>
-    <% end %>
+<% if enabled_users_section %>
+  <div class="btn-group btn-entity-group">
+    <div class='custom-list d-flex flex-row align-items-center'>
+      <div class='circle'></div>
+      <%= link_to users_development_metrics_path do %>
+        <span class='font-size-1'>Users</span>
+      <% end %>
+    </div>
+    <%= yield(:users_dropdown) %>
   </div>
-  <%= yield(:users_dropdown) %>
-</div>
+<% end %>
