--- a/app/views/code_climate/departments/show.erb
+++ b/app/views/code_climate/departments/show.erb
@@ -1,4 +1,4 @@
-<%=  render 'development_metrics/development_metrics_sidebar' %>
+<%=  render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
 
 <div class="col-md-12">
   <div class="row p-3">
