--- a/app/views/development_metrics/_development_metrics_sidebar.erb
+++ b/app/views/development_metrics/_development_metrics_sidebar.erb
@@ -1,3 +1,3 @@
 <%= content_for :development_metrics_sidebar do %>
-  <%= render 'development_metrics/sidebar' %>
+  <%= render 'development_metrics/sidebar', enabled_users_section: enabled_users_section %>
 <% end %>
