--- a/app/views/development_metrics/index.erb
+++ b/app/views/development_metrics/index.erb
@@ -1,1 +1,1 @@
-<%=  render 'development_metrics/development_metrics_sidebar' %>
+<%=  render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
