--- a/app/views/development_metrics/projects.erb
+++ b/app/views/development_metrics/projects.erb
@@ -1,5 +1,5 @@
 <%= render 'development_metrics/projects_dropdown' %>
-<%= render 'development_metrics/development_metrics_sidebar' %>
+<%= render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
 
 <div class="metrics-container container col-md-12">
   <%= render 'shared/project/nav-filter' do |f|%>
@@ -13,16 +13,20 @@
     </div>
   <% end %>
 
-  <%= render('code_owners', code_owners: @code_owners) unless @code_owners.nil? %>
+  <% if @enabled_project_codeowners_section %>
+    <%= render('code_owners', code_owners: @code_owners) unless @code_owners.nil? %>
+  <% end %>
   <% if @project %>
     <div class="metrics shadow-box">
       <h4 class="p-3">Time to second review</h4>
       <div class="graph">
         <%= render 'development_metrics/review_turnaround/main_metric', review_turnaround: @review_turnaround %>
       </div>
-      <div class="graph details">
-        <%= render 'development_metrics/review_turnaround/details_metric', review_turnaround: @review_turnaround %>
-      </div>
+      <% if @enabled_project_per_user_graph %>
+        <div class="graph details">
+          <%= render 'development_metrics/review_turnaround/details_metric', review_turnaround: @review_turnaround %>
+        </div>
+      <% end %>
     </div>
 
     <div class="metrics shadow-box">
@@ -30,9 +34,11 @@
       <div class="graph">
         <%= render 'development_metrics/merge_time/main_metric', merge_time: @merge_time %>
       </div>
-      <div class="graph details">
-        <%= render 'development_metrics/merge_time/details_metric', merge_time: @merge_time %>
-      </div>
+      <% if @enabled_project_per_user_graph %>
+        <div class="graph details">
+          <%= render 'development_metrics/merge_time/details_metric', merge_time: @merge_time %>
+        </div>
+      <% end %>
     </div>
   <% else %>
     <div class="row">
