--- a/app/views/development_metrics/users.erb
+++ b/app/views/development_metrics/users.erb
@@ -1,5 +1,5 @@
 <%= render 'development_metrics/users_dropdown' %>
-<%= render 'development_metrics/development_metrics_sidebar' %>
+<%= render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
 
 <div class="body-empty-container col-md-12 d-flex justify-content-center align-items-center">
   <span>Please select a user to see the projects he is working on</span>
