--- a/app/views/pull_requests/time_to_merge_prs/index.erb
+++ b/app/views/pull_requests/time_to_merge_prs/index.erb
@@ -1,4 +1,4 @@
-<%=  render 'development_metrics/development_metrics_sidebar' %>
+<%=  render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
 
 <div class="container-fluid">
   <div class="row">
