--- a/app/views/users/projects/index.erb
+++ b/app/views/users/projects/index.erb
@@ -1,4 +1,4 @@
-<%=  render 'development_metrics/development_metrics_sidebar' %>
+<%=  render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
 
 <div class="metrics-container col-md-12">
   <h2 class='user-name'><%= @user.login%></h2>
