--- a/app/views/development_metrics/_department_overview.erb
+++ b/app/views/development_metrics/_department_overview.erb
@@ -1,4 +1,4 @@
-<div class="departments-summary col-md-12">
+<div class="summary col-md-12">
   <div class="overview">
     <div class="container p-3">
       <div class="title">
