--- a/app/views/development_metrics/merge_time/_success_rate_detail.erb
+++ b/app/views/development_metrics/merge_time/_success_rate_detail.erb
@@ -1,5 +1,5 @@
 <% if merge_time_success_rate.present? %>
-  <p>
+  <p class='alert alert-secondary'>
     Out of <%= merge_time_success_rate[:total] %> pull requests,
     <%= merge_time_success_rate[:successful] %> were merged in the first
     <%= merge_time_success_rate[:metric_detail][:value] %> hours.
