Add testing for defect escape data classes, summary view, env sample

--- a/app/views/development_metrics/defect_escape_rate/_main_metric.erb
+++ b/app/views/development_metrics/defect_escape_rate/_main_metric.erb
@@ -1,6 +1,7 @@
-<%= render partial: 'development_metrics/defect_escape_rate/line-chart',
+<%= render partial: 'shared/column-chart',
            locals: {
              metric_name: '',
+             suffix: ' %',
              metric: defect_escape_rate[:per_defect_escape_rate]
            } if defect_escape_rate && defect_escape_rate[:per_defect_escape_rate] %>
 <%= render partial: 'development_metrics/defect_escape_rate/values_details',
