--- a/app/views/development_metrics/projects.erb
+++ b/app/views/development_metrics/projects.erb
@@ -2,7 +2,7 @@
 <%= render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
 
 <div class="metrics-container container col-md-12">
-  <%= render 'shared/project/nav-filter' do |f|%>
+  <%= render 'shared/project/nav-filter' do |f| %>
     <div class="row">
       <div class="col-md-5 period-input">
         <%= render 'shared/interval-filter', form: f %>
@@ -46,6 +46,21 @@
       <div class="graph">
         <%= render 'development_metrics/pull_request_size/main_metric', pull_request_size: @pull_request_size %>
       </div>
+    </div>
+
+    <div class="metrics shadow-box">
+      <h4 class="p-3">Defect Escape Rate</h4>
+      <% if @defect_escape_rate %>
+        <div class="graph">
+          <%= render 'development_metrics/defect_escape_rate/main_metric', defect_escape_rate: @defect_escape_rate %>
+        </div>
+      <% else %>
+        <div class="summary col-md-12">
+          <div class="container p-12 text-center">
+            <span class="text-danger extra-padding"><h5>No Jira project associated. Contact an administrator</h5></span>
+          </div>
+        </div>
+      <% end %>
     </div>
   <% else %>
     <div class="row">
