--- a/app/views/development_metrics/defect_escape_rate/_values_details.erb
+++ b/app/views/development_metrics/defect_escape_rate/_values_details.erb
@@ -1,4 +1,4 @@
-<div class="summary col-md-4">
+<div class="summary col-md-#{details ? '4' : '12'}">
   <div class="container p-4">
     <h3>Summary</h3>
     <hr>
