--- a/app/views/development_metrics/_sidebar.erb
+++ b/app/views/development_metrics/_sidebar.erb
@@ -10,11 +10,11 @@
 <div class="btn-group btn-entity-group">
   <div class='custom-list d-flex flex-row align-items-center'>
     <div class='circle'></div>
-    <%= link_to projects_development_metrics_path do %>
+    <%= link_to products_development_metrics_path do %>
       <span class='font-size-1'>Project metrics</span>
     <% end %>
   </div>
-  <%= yield(:projects_dropdown) %>
+  <%= yield(:products_dropdown) %>
 </div>
 <% if enabled_users_section %>
   <div class="btn-group btn-entity-group">
