--- a/app/views/development_metrics/defect_escape_rate/_main_metric.erb
+++ b/app/views/development_metrics/defect_escape_rate/_main_metric.erb
@@ -7,4 +7,5 @@
 <%= render partial: 'development_metrics/defect_escape_rate/values_details',
            locals: {
              metric: defect_escape_rate[:per_defect_escape_values].first[:data],
+             details: details
            } if defect_escape_rate && defect_escape_rate[:per_defect_escape_values] %>
