--- a/app/views/development_metrics/projects.erb
+++ b/app/views/development_metrics/projects.erb
@@ -1,8 +1,10 @@
-<%= render 'development_metrics/projects_dropdown' %>
 <%= render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
+
+<%= render 'development_metrics/navigation', product: @project.product %>
 
 <div class="metrics-container container col-md-12">
   <%= render 'shared/project/nav-filter' do |f| %>
+    <%= hidden_field_tag 'project_name', @project.name  %>
     <div class="row">
       <div class="col-md-5 period-input">
         <%= render 'shared/interval-filter', form: f %>
@@ -46,21 +48,6 @@
       <div class="graph">
         <%= render 'development_metrics/pull_request_size/main_metric', pull_request_size: @pull_request_size %>
       </div>
-    </div>
-
-    <div class="metrics shadow-box">
-      <h4 class="p-3">Defect Escape Rate</h4>
-      <% if @defect_escape_rate %>
-        <div class="graph">
-          <%= render 'development_metrics/defect_escape_rate/main_metric', defect_escape_rate: @defect_escape_rate %>
-        </div>
-      <% else %>
-        <div class="summary col-md-12">
-          <div class="container p-12 text-center">
-            <span class="text-danger extra-padding"><h5>No Jira project associated. Contact an administrator</h5></span>
-          </div>
-        </div>
-      <% end %>
     </div>
   <% else %>
     <div class="row">
