--- a/app/views/development_metrics/projects.erb
+++ b/app/views/development_metrics/projects.erb
@@ -1,5 +1,8 @@
 <%= render 'development_metrics/development_metrics_sidebar', enabled_users_section: @enabled_users_section %>
 
+<div class="col-md-12 text-center mt-2">
+  <b><%= @project.product[:name] %></b>
+</div>
 <%= render 'development_metrics/navigation', product: @project.product %>
 
 <div class="metrics-container container col-md-12">
