--- a/app/views/development_metrics/_navigation.html.erb
+++ b/app/views/development_metrics/_navigation.html.erb
@@ -1,15 +1,17 @@
 <nav class="nav nav-style nav-txt-color p-2 nav-items-container col-md-12 d-flex justify-content-between">
   <div class="d-flex flex-row">
+  <% if product.present? %>
     <%if current_page?(products_development_metrics_path) || current_page?(products_metrics_development_metrics_path)%>
       <a href='<%= products_development_metrics_path({product_name: product[:name], metric: { period: 4 }}) %>' class='nav-link active nav-txt-color selected mx-1' role='button'>General</a>
     <% else %>
       <a href='<%= products_development_metrics_path({product_name: product[:name], metric: { period: 4 }}) %>' class='nav-link active nav-txt-color mx-1' role='button'>General</a>
     <% end %>
-    <% product.projects.each do |project|%>
-      <%if current_page?(projects_development_metrics_path({project_name: project[:name], metric: { period: params&.dig(:metric, :period) }}))%>
-        <a href='<%= projects_development_metrics_path({project_name: project[:name], metric: { period: params&.dig(:metric, :period) }}) %>' class='nav-link active nav-txt-color selected mx-1' role='button'><%= project[:name] %></a>
-      <% else %>
-        <a href='<%= projects_development_metrics_path({project_name: project[:name], metric: { period: params&.dig(:metric, :period) }}) %>' class='nav-link active nav-txt-color mx-1' role='button'><%= project[:name] %></a>
+      <% product.projects.each do |project|%>
+        <%if current_page?(projects_development_metrics_path({project_name: project[:name], metric: { period: params&.dig(:metric, :period) }}))%>
+          <a href='<%= projects_development_metrics_path({project_name: project[:name], metric: { period: params&.dig(:metric, :period) }}) %>' class='nav-link active nav-txt-color selected mx-1' role='button'><%= project[:name] %></a>
+        <% else %>
+          <a href='<%= projects_development_metrics_path({project_name: project[:name], metric: { period: params&.dig(:metric, :period) }}) %>' class='nav-link active nav-txt-color mx-1' role='button'><%= project[:name] %></a>
+        <% end %>
       <% end %>
     <% end %>
   </div>
