Add development cycle empty state

--- a/app/views/development_metrics/development_cycle/_values_details.erb
+++ b/app/views/development_metrics/development_cycle/_values_details.erb
@@ -2,7 +2,7 @@
   <div class="container p-4">
     <h3>Summary</h3>
     <hr>
-    <% if metric -%>
+    <% if metric && metric[:average]&.positive? -%>
       <div class="item-list">
         <div>
           <h5>Overall <%= development_cycle_definition && development_cycle_definition[:name] %>:</h5>
