Add planned_to_done to Views

--- a/app/views/development_metrics/products.erb
+++ b/app/views/development_metrics/products.erb
@@ -19,11 +19,14 @@
             product: @product,
             defect_escape_rate: @defect_escape_rate,
             development_cycle: @development_cycle,
+            planned_to_done: @planned_to_done,
             development_cycle_definition: @development_cycle_definition,
             defect_escape_rate_definition: @defect_escape_rate_definition,
+            planned_to_done_definition: @planned_to_done_definition,
             has_jira_project: @has_jira_project,
             show_defect_escape_rate: @show_defect_escape_rate,
-            show_development_cycle: @show_development_cycle %>
+            show_development_cycle: @show_development_cycle,
+            show_planned_to_done: @show_planned_to_done %>
         <% end %>
     <% else %>
       <div class="row">
