Add rate and values to metrics

--- a/app/views/development_metrics/planned_to_done/_values_details.erb
+++ b/app/views/development_metrics/planned_to_done/_values_details.erb
@@ -15,7 +15,7 @@
       </div>
     <% else -%>
       <div class="col-md-12 text-center mt-2">
-        <span class="text-danger">No issues reported on this period</span>
+        <span class="text-danger">No sprints completed on this period</span>
       </div>
     <% end -%>
   </div>
