--- a/app/views/development_metrics/planned_to_done/_main_metric.erb
+++ b/app/views/development_metrics/planned_to_done/_main_metric.erb
@@ -1,9 +1,8 @@
-<%= render partial: 'shared/column-chart',
+<%= render partial: 'shared/multi-column-chart',
            locals: {
              metric_name: '',
-             suffix: ' points',
-             metric: planned_to_done[:per_planned_to_done]
-           } if planned_to_done && planned_to_done[:per_planned_to_done] %>
+             metric: planned_to_done[:per_planned_to_done_rate]
+           } if planned_to_done && planned_to_done[:per_planned_to_done_rate] %>
 <%= render partial: 'development_metrics/planned_to_done/values_details',
            locals: {
              metric: planned_to_done[:per_planned_to_done_values].first[:data],
