--- a/app/views/development_metrics/planned_to_done/_main_metric.erb
+++ b/app/views/development_metrics/planned_to_done/_main_metric.erb
@@ -2,6 +2,13 @@
            locals: {
              metric_name: '',
              metric: planned_to_done[:per_planned_to_done_values].first[:data]
+                      .group_by{ |h| h[:name] }
+                      .map do |k, v| 
+                        {
+                          name: k,
+                          data: v.map { |h| h[:data] }.reduce(&:merge)
+                        }
+                      end
            } if planned_to_done && planned_to_done[:per_planned_to_done_values] %>
 <%= render partial: 'development_metrics/planned_to_done/values_details',
            locals: {
