--- a/app/views/development_metrics/planned_to_done/_main_metric.erb
+++ b/app/views/development_metrics/planned_to_done/_main_metric.erb
@@ -2,11 +2,11 @@
            locals: {
              metric_name: '',
              metric: planned_to_done[:per_planned_to_done_values].first[:data]
-                      .group_by{ |h| h[:name] }
-                      .map do |k, v| 
+                      .group_by{ |sprint| sprint[:name] }
+                      .map do |label, points| 
                         {
-                          name: k,
-                          data: v.map { |h| h[:data] }.reduce(&:merge)
+                          name: label,
+                          data: points.map { |sprint| sprint[:data] }.reduce(&:merge)
                         }
                       end
            } if planned_to_done && planned_to_done[:per_planned_to_done_values] %>
