add colors only to PTD chart

--- a/app/views/shared/_column-labels.erb
+++ b/app/views/shared/_column-labels.erb
@@ -5,6 +5,7 @@
         ytitle: "Story points",
         xtitle: "Sprints",
         suffix: " points",
+        colors: ['#0080ff', '#3CB371'],
         library: { spanGaps: true } %>
   </div>
 </div>
