Change project to repository

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 @import "utils/*";
 
 @import "nav-filter";
-@import "users/projects/*";
+@import "users/repositories/*";
 
 .main-column {
   flex: 6;
