--- a/app/assets/stylesheets/shared/_sidebar.scss
+++ b/app/assets/stylesheets/shared/_sidebar.scss
@@ -1,4 +1,4 @@
-.project-selection {
+.repository-selection {
   @include centered-flex-columns;
 }
 .product-selection {
@@ -10,7 +10,7 @@
   width: 100%;
 }
 
-.metric_project{
+.metric_repository{
   width: 100%;
 }
 
