--- a/app/views/development_metrics/_department_overview.erb
+++ b/app/views/development_metrics/_department_overview.erb
@@ -10,8 +10,8 @@
             <span>
               <%= language_overview[:totals] %> <b><%= language.titleize %></b> <%= 'repository'.pluralize(language_overview[:totals]) %>, of which:
             </span>
-            <% language_overview[:per_relevance].each do |relevance, project_count| %>
-              <li><b><%= project_count %></b> <%= relevance %></li>
+            <% language_overview[:per_relevance].each do |relevance, repository_count| %>
+              <li><b><%= repository_count %></b> <%= relevance %></li>
             <% end %>
           </div>
         <% end %>
