--- a/app/views/development_metrics/merge_time/_details_metric.erb
+++ b/app/views/development_metrics/merge_time/_details_metric.erb
@@ -6,6 +6,6 @@
   <%= render partial: 'shared/line-chart',
               locals: {
                 metric_name: '',
-                metric: merge_time[:per_users_project] || merge_time[:per_language]
-              } if merge_time && (merge_time[:per_users_project] || merge_time[:per_language]) %>
+                metric: merge_time[:per_users_repository] || merge_time[:per_language]
+              } if merge_time && (merge_time[:per_users_repository] || merge_time[:per_language]) %>
 </div>
