--- a/app/views/development_metrics/merge_time/_main_metric.erb
+++ b/app/views/development_metrics/merge_time/_main_metric.erb
@@ -1,11 +1,11 @@
 <%= render partial: 'shared/line-chart',
             locals: {
               metric_name: 'Average',
-              metric: merge_time[:per_project] || merge_time[:per_department]
-            } if merge_time && (merge_time[:per_project] || merge_time[:per_department]) %>
+              metric: merge_time[:per_repository] || merge_time[:per_department]
+            } if merge_time && (merge_time[:per_repository] || merge_time[:per_department]) %>
 <%= render partial: 'shared/column-chart',
             locals: {
               metric_name: 'Distribution',
               suffix: " pull requests",
-              metric: merge_time[:per_project_distribution] || merge_time[:per_department_distribution]
-            } if merge_time && (merge_time[:per_project_distribution] || merge_time[:per_department_distribution]) %>
+              metric: merge_time[:per_repository_distribution] || merge_time[:per_department_distribution]
+            } if merge_time && (merge_time[:per_repository_distribution] || merge_time[:per_department_distribution]) %>
