--- a/app/views/development_metrics/products_metrics.erb
+++ b/app/views/development_metrics/products_metrics.erb
@@ -37,7 +37,7 @@
   <% else %>
     <div class="row">
       <div class="body-empty-container col-md-12 d-flex justify-content-center align-items-center">
-        <span>Please select a project to see its metrics</span>
+        <span>Please select a repository to see its metrics</span>
       </div>
     </div>
   <% end %>
