--- a/app/views/development_metrics/review_turnaround/_details_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_details_metric.erb
@@ -6,8 +6,8 @@
   <%= render partial: 'shared/line-chart',
               locals: {
                 metric_name: '',
-                metric: review_turnaround[:per_users_project] || review_turnaround[:per_language]
+                metric: review_turnaround[:per_users_repository] || review_turnaround[:per_language]
               } if review_turnaround &&
-                   (review_turnaround[:per_users_project] ||
+                   (review_turnaround[:per_users_repository] ||
                    review_turnaround[:per_language]) %>
 </div>
