--- a/app/views/users/external_pull_requests/_nav-filter.erb
+++ b/app/views/users/external_pull_requests/_nav-filter.erb
@@ -3,7 +3,7 @@
     method: 'GET', html: {
       class: 'nav-filter p-3 shadow-box',
       id: 'nav-filter-form' } do |f|%>
-        <h4 class="text-center">Contributions to external projects</h4>
+        <h4 class="text-center">Contributions to external repositories</h4>
         <div class="row justify-content-start align-items-end mt-3 ml-3">
           <span>Show data for the last</span>
           <%= f.input :from,
