--- a/app/views/development_metrics/_products_dropdown.erb
+++ b/app/views/development_metrics/_products_dropdown.erb
@@ -2,9 +2,9 @@
   <div class="list-product">
     <select name="product_name" class="product-selection" form='nav-filter-form'>
       <% if params[:product_name].blank? %>
-        <option selected value disabled>Choose a project</option>
+        <option selected value disabled>Choose a repository</option>
       <% else %>
-        <option value disabled>Choose a project</option>
+        <option value disabled>Choose a repository</option>
       <% end %>
       <% all_products_names.each do |name|%>
         <%if params[:product_name] == name %>
