--- a/app/views/development_metrics/_sidebar.erb
+++ b/app/views/development_metrics/_sidebar.erb
@@ -11,7 +11,7 @@
   <div class='custom-list d-flex flex-row align-items-center'>
     <div class='circle'></div>
     <%= link_to products_development_metrics_path do %>
-      <span class='font-size-1'>Project metrics</span>
+      <span class='font-size-1'>Repository metrics</span>
     <% end %>
   </div>
   <%= yield(:products_dropdown) %>
