--- a/app/views/development_metrics/review_turnaround/_main_metric.erb
+++ b/app/views/development_metrics/review_turnaround/_main_metric.erb
@@ -1,11 +1,11 @@
 <%= render partial: 'shared/line-chart',
             locals: {
               metric_name: 'Average',
-              metric: review_turnaround[:per_project] || review_turnaround[:per_department]
-            } if review_turnaround && (review_turnaround[:per_project] || review_turnaround[:per_department]) %>
+              metric: review_turnaround[:per_repository] || review_turnaround[:per_department]
+            } if review_turnaround && (review_turnaround[:per_repository] || review_turnaround[:per_department]) %>
 <%= render partial: 'shared/column-chart',
             locals: {
               metric_name: 'Distribution',
               suffix: " reviews",
-              metric: review_turnaround[:per_project_distribution] || review_turnaround[:per_department_distribution]
-            } if review_turnaround && (review_turnaround[:per_project_distribution] || review_turnaround[:per_department_distribution]) %>
+              metric: review_turnaround[:per_repository_distribution] || review_turnaround[:per_department_distribution]
+            } if review_turnaround && (review_turnaround[:per_repository_distribution] || review_turnaround[:per_department_distribution]) %>
